Controller ORCJAVA-329
======================

 - The controller build script does not mandate an explicit character
   encoding for all Java compiler tasks. This causes issues on some
   systems with incompatible default character set/locale. This patch
   enforces UTF-8 encoding on all compiled source files.


Controller ORCJAVA-328
======================

- Telnet log configuration


Controller ORCJAVA-326
======================

 - Telnet status read for switch sensors appears broken. A returned
   'on' string is never correctly parsed to Java boolean value true
   due to the extra linefeed '\n' character being added to all response
   values in readString() implementation


Controller 2.1.0 (2012-XX-XX Twin Galaxies)
===========================================

New Features:

  - Added DSC-IT 100 Security System integration - IP to serial (Greg Rapp)
  - Lagarto server (panStamps) integration (Daniel Berenguer)
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)
  - KNX: added distinct levels for 'DIM' and 'SCALE' commands that allow
    set values to be configured for buttons, e.g. 'DIM 50' to dim directly
    to 50% (Eric Bariaux, ORCJAVA-71).
  - HTTP protocol: methods GET, POST, PUT and DELETE are now supported.
    For HTTP/JSON return documents, a JSON Path expression is supported.
    For outgoing HTTP request, a user agent header is included which
    contains 'OpenRemoteController' as agent value which HTTP applications
    can use to identify requests originating from the controller.
    Internally, the implementation has been converted to use URIs instead 
    of URLs which resolves an issue with lack of encoding of HTTP parameters 
    which contain which contain white spaces or other special characters 
    (Marcus Redeker)
  - One Wire: Added possibility to specify temperature values in
    either Celsius (default), Kelvin, Fahrenheit or Rankine scales, data
    property added for sending values to switches (Marcus Redeker)