@@ -1,3 +1,11 @@
+Controller ORCJAVA-332
+======================
+
+ - Updates the core controller classes (excluding protocol
+   implementations, these are updated in separate tasks) to use
+   locale independent string conversions
+
+
 Controller ORCJAVA-329
 ======================
 
